更新 源 html 文件, 修正 newContentNode 的插入. 修正对内容中 <> 标签的处理

--- a/source_example.html
+++ b/source_example.html
@@ -59,3 +59,23 @@ An HTML attachment was scrubbed...
 URL: &lt;<A HREF="https://lists.swift.org/pipermail/swift-evolution/attachments/20160208/74b9700d/attachment.html">https://lists.swift.org/pipermail/swift-evolution/attachments/20160208/74b9700d/attachment.html</A>&gt;
 </PRE>
 
+<!--endarticle-->
+<HR>
+<P><UL>
+    <!--threads-->
+    <LI>Previous message: <A HREF="009403.html">[swift-evolution] What about garbage collection?
+    </A></li>
+    <LI>Next message: <A HREF="009406.html">[swift-evolution] What about garbage collection?
+    </A></li>
+    <LI> <B>Messages sorted by:</B>
+        <a href="date.html#9405">[ date ]</a>
+        <a href="thread.html#9405">[ thread ]</a>
+        <a href="subject.html#9405">[ subject ]</a>
+        <a href="author.html#9405">[ author ]</a>
+    </LI>
+</UL>
+
+<hr>
+<a href="https://lists.swift.org/mailman/listinfo/swift-evolution">More information about the swift-evolution
+    mailing list</a><br>
+</body></html>
